// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/cascader/demo/basic.md correctly 1`] = `
<span
  class="wmstool-cascader-picker"
  tabindex="0"
>
  <span
    class="wmstool-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="wmstool-input wmstool-cascader-input "
    placeholder="Please select"
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down wmstool-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/change-on-select.md correctly 1`] = `
<span
  class="wmstool-cascader-picker"
  tabindex="0"
>
  <span
    class="wmstool-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="wmstool-input wmstool-cascader-input "
    placeholder="Please select"
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down wmstool-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/custom-render.md correctly 1`] = `
<span
  class="wmstool-cascader-picker"
  style="width:100%"
  tabindex="0"
>
  <span
    class="wmstool-cascader-picker-label"
  >
    <span>
      Zhejiang / 
    </span>
    <span>
      Hangzhou / 
    </span>
    <span>
      West Lake (
      <a>
        752100
      </a>
      )
    </span>
  </span>
  <input
    autocomplete="off"
    class="wmstool-input wmstool-cascader-input "
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-cross-circle wmstool-cascader-picker-clear"
  />
  <i
    class="anticon anticon-down wmstool-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/custom-trigger.md correctly 1`] = `
<span>
  Unselect 
  <a
    href="#"
    tabindex="0"
  >
    Change city
  </a>
</span>
`;

exports[`renders ./components/cascader/demo/default-value.md correctly 1`] = `
<span
  class="wmstool-cascader-picker"
  tabindex="0"
>
  <span
    class="wmstool-cascader-picker-label"
  >
    Zhejiang / Hangzhou / West Lake
  </span>
  <input
    autocomplete="off"
    class="wmstool-input wmstool-cascader-input "
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-cross-circle wmstool-cascader-picker-clear"
  />
  <i
    class="anticon anticon-down wmstool-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/disabled-option.md correctly 1`] = `
<span
  class="wmstool-cascader-picker"
  tabindex="0"
>
  <span
    class="wmstool-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="wmstool-input wmstool-cascader-input "
    placeholder="Please select"
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down wmstool-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/hover.md correctly 1`] = `
<span
  class="wmstool-cascader-picker"
  tabindex="0"
>
  <span
    class="wmstool-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="wmstool-input wmstool-cascader-input "
    placeholder="Please select"
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down wmstool-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/lazy.md correctly 1`] = `
<span
  class="wmstool-cascader-picker"
  tabindex="0"
>
  <span
    class="wmstool-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="wmstool-input wmstool-cascader-input "
    placeholder="Please select"
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down wmstool-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/search.md correctly 1`] = `
<span
  class="wmstool-cascader-picker"
  tabindex="0"
>
  <span
    class="wmstool-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="wmstool-input wmstool-cascader-input "
    placeholder="Please select"
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down wmstool-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/size.md correctly 1`] = `
<div>
  <span
    class="wmstool-cascader-picker wmstool-cascader-picker-large"
    tabindex="0"
  >
    <span
      class="wmstool-cascader-picker-label"
    />
    <input
      autocomplete="off"
      class="wmstool-input wmstool-cascader-input wmstool-input-lg"
      placeholder="Please select"
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-down wmstool-cascader-picker-arrow"
    />
  </span>
  <br />
  <br />
  <span
    class="wmstool-cascader-picker"
    tabindex="0"
  >
    <span
      class="wmstool-cascader-picker-label"
    />
    <input
      autocomplete="off"
      class="wmstool-input wmstool-cascader-input "
      placeholder="Please select"
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-down wmstool-cascader-picker-arrow"
    />
  </span>
  <br />
  <br />
  <span
    class="wmstool-cascader-picker wmstool-cascader-picker-small"
    tabindex="0"
  >
    <span
      class="wmstool-cascader-picker-label"
    />
    <input
      autocomplete="off"
      class="wmstool-input wmstool-cascader-input wmstool-input-sm"
      placeholder="Please select"
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-down wmstool-cascader-picker-arrow"
    />
  </span>
  <br />
  <br />
</div>
`;
